# yabt

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  ab_autotune_candidate.py  ab_autotune_recover.py  ab_c_grower.py  ab_gamma_fullsuite.py  ab_grow_numba.py  ab_levelwise.py  ab_levelwise_interaction.py  ab_noise_reg.py  ab_product_features.py  ab_relgamma.py  ab_sparse_hist.py  ab_suite_autotune.py  datasets.py  openml_benchmark.py  openml_benchmark_results.json  profile_fit.py  render_results_table.py
tests/: test_auto_tune.py  test_c_grower.py  test_cuda_hist.py  test_e2e.py  test_fixes.py  test_interaction_aware.py  test_kernel_splits.py  test_multitask.py  test_neural_leaves.py  test_novel_features.py  test_numba_grower.py  test_param_docs.py  test_product_features.py  test_render_results.py  test_splits.py  test_stochastic_routing.py
yabt/: __init__.py  adaptive_features.py  auto_tune.py  binning.py  boosting.py  cuda_hist.py  grow_c.py  grow_numba.py  histogram.py  kernel_splits.py  multiclass.py  multitask.py  neural_leaves.py  product_features.py  refine_fast.py  sklearn_api.py  tree.py
yabt/_cgrow/: grow.c
yabt/_cuda/: hist.cu
