[project]
name = "yabt"
version = "0.1.0"
description = "Yet Another Boosting Tree — GPU gradient boosting with differentiable tree refinement"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numba>=0.57",
]

[project.optional-dependencies]
bench = [
    "xgboost>=2.1",
    "lightgbm>=4.4",
    "catboost>=1.2",
    "optuna>=3.6",
    "openml>=0.14",
    "rich>=15.0.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yabt"]
