[project]
name = "yabt"
version = "0.1.0"
description = "Yet Another Boosting Tree — GPU gradient boosting with differentiable tree refinement"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Rafael Gomes", email = "rafael.enterprise@gmail.com" },
]
keywords = [
    "gradient-boosting",
    "decision-trees",
    "gpu",
    "machine-learning",
    "scikit-learn",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numba>=0.57",
]

[project.urls]
Homepage = "https://github.com/grafael/yabt"
Repository = "https://github.com/grafael/yabt"
Issues = "https://github.com/grafael/yabt/issues"

[project.optional-dependencies]
# Optional: enables the custom CUDA histogram kernel for the GPU grower (compiled
# on first use via torch.utils.cpp_extension, which shells out to ninja). Without
# it the grower falls back to the torch scatter -- a perf fallback, not a
# correctness loss -- so it is not a hard dependency.
cuda = [
    "ninja>=1.11",
]
bench = [
    "xgboost>=2.1",
    "lightgbm>=4.4",
    "catboost>=1.2",
    "optuna>=3.6",
    "openml>=0.14",
    "rich>=15.0.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yabt"]
